// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Deposit into existing position: depositBase 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 133671,
}
`;

exports[`Deposit into existing position: depositQuote 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 133575,
}
`;

exports[`Liquidation liquidate long position and create new long position 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 273204,
}
`;

exports[`Liquidation liquidate long position and create new position 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 289992,
}
`;

exports[`Liquidation liquidate short position and create new position 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 303363,
}
`;

exports[`Liquidation liquidate short position and create new short position 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 289428,
}
`;

exports[`Open position: depositBase 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 215000,
}
`;

exports[`Open position: depositQuote 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 214876,
}
`;

exports[`System initialized: closePosition 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 264459,
}
`;

exports[`System initialized: depositBase 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 214006,
}
`;

exports[`System initialized: depositBase and long 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 365822,
}
`;

exports[`System initialized: depositQuote 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 213837,
}
`;

exports[`System initialized: depositQuote and short 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 343789,
}
`;

exports[`System initialized: long 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 307361,
}
`;

exports[`System initialized: short 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 285436,
}
`;

exports[`System initialized: withdrawBase 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 172923,
}
`;

exports[`System initialized: withdrawQuote 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 191879,
}
`;

exports[`mc happens: MC long position with deleverage 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 227915,
}
`;

exports[`mc happens: MC long reinit 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 196683,
}
`;

exports[`mc happens: MC short position with deleverage 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 228040,
}
`;

exports[`mc happens: MC short reinit 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 196682,
}
`;

exports[`mc happens: closePosition with two mc 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 372684,
}
`;

exports[`mc happens: depositBase with one mc 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 261841,
}
`;

exports[`mc happens: depositBase with two mc 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 359743,
}
`;

exports[`mc happens: depositQuote with one mc 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 252364,
}
`;

exports[`mc happens: depositQuote with two mc 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 290850,
}
`;

exports[`mc happens: long closePosition with one mc 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 263613,
}
`;

exports[`mc happens: long initialized heap with one mc 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 291295,
}
`;

exports[`mc happens: long with one mc 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 368574,
}
`;

exports[`mc happens: long with two mc 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 388268,
}
`;

exports[`mc happens: short with one mc 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 336009,
}
`;

exports[`mc happens: short with two mc 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 383424,
}
`;
